unpackaged/main/default/objects/SpringCMEos__SpringCM_Testing__c/SpringCMEos__SpringCM_Testing__c.object-meta.xml
<CustomObject>
    <label>SpringCM Testing</label>
    <nameField>
        <label>SpringCM Testing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SpringCM Testing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>