unpackaged/main/default/objects/SpringCMEos__SpringCM_Testing__c/fields/SpringCMEos__Status__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>