unpackaged/main/default/objects/SpringCMEos__SpringCM_Testing__c/fields/SpringCMEos__Subject__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>