unpackaged/main/default/objects/SpringCMEos__SpringCM_Testing__c/fields/SpringCMEos__Year__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Year__c</fullName>
    <label>Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>